# auth_kademlia

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.env/: pyvenv.cfg
examples/: cache_bench.rs  publish_did.rs  stress_test.rs  topology_analysis.rs  topology_test.rs
resilience/: Dockerfile  README.md  degradation_sweep.py  docker-compose.yaml  run_stats.py
scripts/: dht_node.rs  resilience_attacker.rs  resilience_victim.rs
src/: auth_handler.rs  crawling.rs  fragmentation.rs  lib.rs  main.rs  network.rs  node.rs  protocol.rs  py_bindings.rs  routing.rs  server.rs  signature_cache.rs  storage.rs  utils.rs
src/crypto/: dilithium.rs  ed25519.rs  factory.rs  key_manager.rs  mod.rs  rsa.rs  signature_verifier.rs
tests/: crypto_tests.rs  dht_integration.rs  network_tests.rs  routing_tests.rs  storage_tests.rs
tests/common/: mod.rs
tests/scenarios/: cache.rs  churn.rs  common.rs  crypto.rs  replication.rs  worker_pool.rs
