[package]
name = "auth_kademlia"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha1         = "0.10"
rand         = "0.8"
base64       = "0.21"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rsa          = { version = "0.9", features = ["sha2"] }
sha2         = "0.10"
bincode      = "1"
bytes        = "1"
log          = "0.4"
env_logger   = "0.10"
thiserror    = "1"
async-trait  = "0.1"
dashmap      = "5"
hex          = "0.4"
anyhow       = "1"
futures      = "0.3"
indexmap     = "2"

[features]
dilithium_oqs = []