[package]
name = "auth_kademlia"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
async-trait    = "0.1"
async-recursion = "1"
rand_core = "0.10.1"

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
bincode        = "1"

# Cryptography / encoding
sha1               = "0.10"
sha2               = "0.10"
base64             = "0.22"
hex                = "0.4"
rand               = "0.8"
# Post-quantum (Dilithium)
pqcrypto-dilithium = "0.5"
pqcrypto-traits    = "0.3"
# Ed25519
ed25519-dalek      = "2"
# RSA
rsa                = { version = "0.9", features = ["sha2"] }

# Data structures
indexmap       = "2"

# Error handling
thiserror      = "1"

# Logging
log            = "0.4"

[dev-dependencies]
tokio              = { version = "1", features = ["full", "test-util"] }
env_logger         = "0.11"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber     = "0.8"
pqcrypto-traits    = "0.3"
uuid               = { version = "1", features = ["v4"] }
